# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  echo.c  main.c  minishell  minishell.h
includes/: builtins.h  includes.h  logic.h  minishell.h  parser.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_mix.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putnstr.c  ft_putstr_fd.c  ft_split.c  ft_split_free.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+7 more)
sources/: dups.c  echo.c  env_utils.c  errors.c  ft_errors.c  ft_lst.c  ft_parser_utils.c  init.c  loop.c  lst.c  parser.c  parser_utils.c  pipes.c  pipes_utils.c  redirects.c  signals.c  utils.c
sources/builtins/: cd.c  cd_utils.c  echo.c  env.c  exit.c  export.c  export_print.c  export_utils.c  help.c  pwd.c  unset.c
